[package]
name = "eraser"
version = "0.1.0"
authors = ["Keming <kemingy94@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/kemingy/eraser"
homepage = "https://github.com/kemingy/eraser"
categories = ["text-processing"]

[badges]
travis-ci = { repository = "kemingy/eraser", branch = "master" }

[dependencies]
regex = "1.1.6"
